src/test/ui/issues/issue-32709.stderr
error[E0277]: `?` couldn't convert the error to `()`
  --> $DIR/issue-32709.rs:4:11
   |
LL |     Err(5)?;
   |           ^ the trait `std::convert::From<{integer}>` is not implemented for `()`
   |
   = note: required because of the requirements on the impl of `std::convert::Into<()>` for `{integer}`
   = note: required by `std::convert::Into::into`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
